--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 
 <body>
     <main>
-        <input type="text" id="display">
+        <input type="text" id="display" placeholder="0">
         <button data-action="clear" style="grid-area: clear;">AC</button>
         <button data-action="mode" style="grid-area: negate;">+/-</button>
         <button data-action="mode" style="grid-area: percent;">%</button>
